more Agrona tests and ERB test

--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,11 @@ THE POSSIBILITY OF SUCH DAMAGE.
             <artifactId>chronicle-queue-enterprise</artifactId>
             <version>${cqe.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.25</version>
+        </dependency>
 
         <dependency>
             <groupId>org.openjdk.jmh</groupId>
