--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,7 @@ THE POSSIBILITY OF SUCH DAMAGE.
     </dependencies>
 
     <properties>
-        <cq.version>4.6.79</cq.version>
+        <cq.version>4.6.102-SNAPSHOT</cq.version>
         <cqe.version>1.4.54-SNAPSHOT</cqe.version>
         <agrona.version>0.9.15</agrona.version>
 
