--- a/pom.xml
+++ b/pom.xml
@@ -52,9 +52,19 @@ THE POSSIBILITY OF SUCH DAMAGE.
             <version>${cq.version}</version>
         </dependency>
         <dependency>
+            <groupId>net.openhft</groupId>
+            <artifactId>chronicle</artifactId>
+            <version>${cq3.version}</version>
+        </dependency>
+        <dependency>
             <groupId>software.chronicle</groupId>
             <artifactId>chronicle-queue-enterprise</artifactId>
             <version>${cqe.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>net.openhft</groupId>
+            <artifactId>chronicle-bytes</artifactId>
+            <version>1.16.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -76,8 +86,9 @@ THE POSSIBILITY OF SUCH DAMAGE.
     </dependencies>
 
     <properties>
-        <cq.version>4.6.102-SNAPSHOT</cq.version>
-        <cqe.version>1.4.54-SNAPSHOT</cqe.version>
+        <cq.version>4.16.0</cq.version>
+        <cq3.version>3.6.6</cq3.version>
+        <cqe.version>1.16.1-SNAPSHOT</cqe.version>
         <agrona.version>0.9.15</agrona.version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
