latest ring buffer

--- a/pom.xml
+++ b/pom.xml
@@ -81,9 +81,9 @@ THE POSSIBILITY OF SUCH DAMAGE.
     </dependencies>
 
     <properties>
-        <cq.version>5.16.10-SNAPSHOT</cq.version>
+        <cq.version>5.16.15</cq.version>
         <cq3.version>3.6.6</cq3.version>
-        <cqe.version>1.16.12-SNAPSHOT</cqe.version>
+        <cqe.version>2.16.3-SNAPSHOT</cqe.version>
         <agrona.version>0.9.15</agrona.version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
