--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,11 @@ THE POSSIBILITY OF SUCH DAMAGE.
             <artifactId>slf4j-simple</artifactId>
             <version>1.7.25</version>
         </dependency>
-
+        <dependency>
+            <groupId>net.openhft</groupId>
+            <artifactId>chronicle-bytes</artifactId>
+            <version>1.16.28-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>org.openjdk.jmh</groupId>
             <artifactId>jmh-core</artifactId>
